syntax = "proto3";
package org.horiga.study.armeria.grpc.v1;

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

service R2dbcService {
    rpc Select(SelectRequest) returns (SelectResponse);
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}

enum MessageTypes {
    UNSPECIFIED = 0;
    GENERAL     = 1;
    NORMAL      = 2;
    URGENT      = 3;
}

message SelectItem {
    string id = 1;
    string name = 2;
    MessageTypes type = 3;
}

message SelectRequest {
    MessageTypes type = 1;
}

message SelectResponse {
    MessageTypes filter_type = 1;
    repeated SelectItem items = 2;
}
